updating config file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://CaseyR1221.github.io/portfolio-2023",
+  "homepage": "https://CaseyR1221.github.io/portfolio-2023/",
   "name": "portfolio-2023",
   "private": true,
   "version": "0.0.0",
